Bug 415160 - KMail build fails if messagelib is built without Qca-qt5
Summary: KMail build fails if messagelib is built without Qca-qt5
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.13.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-14 00:05 UTC by Bart Ribbers
Modified: 2019-12-17 14:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.13.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Ribbers 2019-12-14 00:05:36 UTC
SUMMARY
The latest KMail release (service release 19.12.0) fails to compile on Alpine Linux (a musl based system)

STEPS TO REPRODUCE
1. Compile KMail like normal on a Musl system

OBSERVED RESULT

/home/builder/aports/testing/kmail/src/kmail-19.12.0/src/kmreadermainwin.cpp:114:59: error: 'class MessageViewer::Viewer' has no member named 'dkimWidgetInfo'
  114 |     statusBar()->addPermanentWidget(mReaderWin->viewer()->dkimWidgetInfo());

EXPECTED RESULT
Compilation to succeed

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Alpine Linux edge, kernel 5.4.3
(available in About System)
KDE Plasma Version: 5.17.3
KDE Frameworks Version: 5.64.0
Qt Version: 5.12.5

ADDITIONAL INFORMATION

This system is based on Musl which I'd normally blame, but it doesn't seem to be the case here. I am however not sure where MessageViewer comes from.
Comment 1 Christophe Marin 2019-12-14 08:35:15 UTC
No issue in openSUSE. Did you forget to update the messagelib tarball?
Comment 2 Bart Ribbers 2019-12-14 10:59:25 UTC
I haven't seen any other distros with this issue sadly. Messagelib has been upgraded to 19.12.0 without issue and is used in this compilation.
Comment 3 Christophe Marin 2019-12-14 12:06:05 UTC
Does it help if you change #include "messageviewer/viewer.h" to #include <messageviewer/viewer.h>?

(can be repeated for the other messageviewer includes in src/kmreadermainwin.cpp)
Comment 4 Bart Ribbers 2019-12-14 17:13:13 UTC
(In reply to Christophe Giboudeaux from comment #3)
> Does it help if you change #include "messageviewer/viewer.h" to #include
> <messageviewer/viewer.h>?

It already is the latter. Changing it around however isn't helping.
Comment 5 Christophe Marin 2019-12-14 18:32:08 UTC
ah yes, my local checkout wasn't up to date. OK, hypothesis, your messagelib package is built without the optional qca-qt5
Comment 6 Bart Ribbers 2019-12-16 11:49:15 UTC
Ha, yup, that was it, it solved it. Interesting, I didn't even realize qca-qt5 was a dependency. It isn't listed in CMakeLists.txt and it's not printed when running CMake. I guess it's not as optional anymore ;)
Comment 7 Christophe Marin 2019-12-17 11:53:20 UTC
Thanks. Title updated
Comment 8 Laurent Montel 2019-12-17 14:33:37 UTC
Git commit f025305936237292ec4d0a8a9fddc1d6cd89a0bd by Laurent Montel.
Committed on 17/12/2019 at 14:32.
Pushed by mlaurent into branch 'release/19.12'.

Fix Bug 415160 - KMail build fails if messagelib is built without Qca-qt5

FIXED-IN: 5.13.1

M  +3    -1    src/kmreadermainwin.cpp

https://commits.kde.org/kmail/f025305936237292ec4d0a8a9fddc1d6cd89a0bd