Fix Bug 415160 - KMail build fails if messagelib is built without Qca-qt5

FIXED-IN: 5.13.1
BUG: 415160